fix(app/app.css): reduce `nprogress` contrast
This patch updates the `NProgress` element styling to reduce the color
contrast with the background page color. Previously, the white/black
contrast was a bit intrusive and alarming. This change was inspired by
the Threads website indeterminate progress indicator.

Ref: https://www.threads.net/@zuck

Closes: NC-715

--- a/app/app.css
+++ b/app/app.css
@@ -136,7 +136,7 @@
 }
 
 #nprogress .bar {
-  background: theme('colors.gray.900');
+  background: theme('colors.gray.400');
 
   position: fixed;
   z-index: 1031;
@@ -148,7 +148,7 @@
 }
 
 .dark #nprogress .bar {
-  background: theme('colors.gray.100');
+  background: theme('colors.gray.600');
 }
 
 /* Fancy blur effect */
@@ -158,7 +158,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px theme('colors.gray.900'), 0 0 5px theme('colors.gray.900');
+  box-shadow: 0 0 10px theme('colors.gray.400'), 0 0 5px theme('colors.gray.400');
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -167,5 +167,5 @@
 }
 
 .dark #nprogress .peg {
-  box-shadow: 0 0 10px theme('colors.gray.100'), 0 0 5px theme('colors.gray.100');
+  box-shadow: 0 0 10px theme('colors.gray.600'), 0 0 5px theme('colors.gray.600');
 }
